# Oxide

./: .gitignore  BUILD_GUIDE.md  CHANGES_DETAILED.md  CONTRIBUTING.md  Cargo.toml  DEBUGGING_ROOMS.md  DEPLOYMENT_READY.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_INDEX_PHASE_3.md  FINAL_REPORT_PHASE_3.md  FIXES_SUMMARY.md  IMPLEMENTATION_PHASE_1_2.md  MIGRATION_REPORT_WGPU.md  PHASE_1_2_UPDATE.md  PHASE_3_COMPLETE.md  PHASE_3_PROGRESS.md  PHASE_3_SUMMARY.md  QUICKSTART.md  README.md  RESUMEN_FINAL_ESPAÑOL.md  ROOM_IMPLEMENTATION.md  SUMMARY_FINAL.md  TESTING_GUIDE_PHASE_3.md  TESTING_ROOMS.md  USAGE_ES.md  USAGE_EXAMPLES.md  VERIFICATION_CHECKLIST.md  VPN_SETUP.md  WINTUN_SETUP.md  build.rs  install-npcap.ps1  install.sh
.github/workflows/: rust.yml
oxide-cli/: Cargo.toml
oxide-cli/src/: main.rs
oxide-core/: Cargo.toml  build.rs
oxide-core/src/: app.rs  config.rs  lib.rs  packet.rs  room.rs  room_manager.rs
oxide-core/src/network/: mesh_controller.rs  mod.rs  nat_traversal.rs  node.rs  p2p_network.rs  packet_handler.rs  peer_connection.rs  vpn_tunnel.rs
oxide-core/src/system/: installer.rs  linux_tun.rs  macos_tun.rs  mod.rs  npcap.rs  tun_device.rs  windows_tun.rs  wintun.rs
oxide-gui/: Cargo.toml
oxide-gui/src/: main.rs
oxide-gui/src/tray/: node.rs
oxide-gui/src/ui/: egui_ui.rs  mod.rs
oxide-service/: Cargo.toml
oxide-service/src/: main.rs
scripts/: build-portable-unix.sh  build-portable-windows.ps1
src/: app.rs  config.rs  main.rs  packet.rs  room.rs  room_manager.rs
src/network/: mesh_controller.rs  mod.rs  nat_traversal.rs  node.rs  p2p_network.rs  packet_handler.rs  peer_connection.rs  vpn_tunnel.rs
src/system/: installer.rs  linux_tun.rs  macos_tun.rs  mod.rs  npcap.rs  tun_device.rs  windows_tun.rs  wintun.rs
src/tray/: mod.rs  node.rs
src/ui/: egui_ui.rs  egui_ui_old.rs
xtask/: Cargo.toml
xtask/src/: main.rs
