[package]
name = "HecateVPN"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
rand = "0.8"
anyhow = "1.0"
local-ip-address = "0.5"     # for IP automatic detection
eframe = "0.26"              # egui framework for multiplatform GUI 
egui = "0.26"
image = "0.24"
tray-icon = "0.11"
winit = "0.29"               # eframe uses it internaly but we need it explicit
libloading = "0.8"
rfd = "0.14"                 # for system dialogs
reqwest = { version = "0.11", features = ["stream"] }
zip = "0.6"
nix = { version = "0.27", features = ["net"] }  # for socket options on Unix
