[package]
name = "oxide-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
oxide-core = { path = "../oxide-core" }
tokio = { version = "1.36", features = ["full"] }
anyhow = "1.0"
local-ip-address = "0.5"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
