[package]
name = "oxide-core"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[features]
default = []
npcap-link = []
pnet-support = ["pnet", "pnet_packet"]

[dependencies]
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
rand = "0.8"
anyhow = "1.0"
libloading = "0.8"
reqwest = { version = "0.11", features = ["stream"] }
zip = "0.6"
socket2 = "0.6"
libc = "0.2"
tun = "0.6"
lazy_static = "1.4"
pnet = { version = "0.34", optional = true }
pnet_packet = { version = "0.34", optional = true }
